--- a/index.html
+++ b/index.html
@@ -45,10 +45,33 @@
         </section>
         <section>
             <h2>OUR TEAM</h2>
+            <ul>
+                <li>
+                    <img src="./images/MarkGuererro.jpg" alt="Mark Guerrero" width="264">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/TomFord.jpg" alt="Tom Ford" width="264">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264">
+                    <h3>Camila Garcia </h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
-
+            <a href="/">WEBSTUDIO</a>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
