--- a/index.html
+++ b/index.html
@@ -7,23 +7,28 @@
 </head>
 <body>
     <header>
-        <a href="/">WEBSTUDIO</a>
         <nav>
+            <a href="./index.html">WEBSTUDIO</a>
             <ul>
-                <li>Studio</li>
-                <li>Portfolio</li>
-                <li>Contacts</li>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
         </address>
     </header>
     <main>
+        <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
+        </section>
         <section>
+            <h2>Something</h2>
             <ul>
             <li>
                 <h3>Strategy</h3>
@@ -44,7 +49,7 @@
         </ul>
         </section>
         <section>
-            <h2>OUR TEAM</h2>
+            <h2>Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/MarkGuererro.jpg" alt="Mark Guerrero" width="264">
@@ -70,7 +75,7 @@
         </section>
     </main>
     <footer>
-            <a href="/">WEBSTUDIO</a>
+            <a href="">WEBSTUDIO</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
