--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -40,7 +40,7 @@
             </li>
             <li>
                 <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
                 <h3>Technologies</h3>
@@ -75,7 +75,7 @@
         </section>
     </main>
     <footer>
-            <a href="">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
